# code_agent

./: .env.example  .enviroment  .gitignore  README.md  inputs.json  pyproject.toml  requirements.txt  running.md
code_agent/: __init__.py  experiment_main.py  graph.py  main.py  state.py
code_agent/experiments/: __init__.py  agent.py  evaluator.py  execute_plan.py  execute_study.py  generic_agent.py  implementer.py  input_config.py  models.py  planner.py  study.py  study_agent.py
code_agent/nodes/: __init__.py  analyze_failure.py  apply_patch.py  clone_repo.py  evaluate_result.py  experiment_designer.py  planner.py  propose_patch.py  repo_analyzer.py  reporter.py  run_tests.py
code_agent/prompts/: patch_prompt.md
code_agent/tools/: __init__.py  command_tools.py  dataset_tools.py  docker_tools.py  file_tools.py  git_tools.py  llm_tools.py  mlflow_tools.py  repo_context.py  safety.py
code_agent/utils/: paths.py  progress.py
configs/: default.yaml
scripts/: run_minimal_demo.py
tests/: test_apply_patch_helpers.py  test_dataset_tools.py  test_execute_plan.py  test_execute_study.py  test_experiment_agent.py  test_experiment_evaluator.py  test_experiment_generic_agent.py  test_experiment_implementer.py  test_experiment_input_config.py  test_experiment_main_input.py  test_experiment_planner.py  test_experiment_study_planner.py  test_graph.py  test_llm_tools.py  test_progress.py  test_state.py
